--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,8 @@
-log/*
-captcha/*.gif
-captcha/*.res
-captcha/archives/*
-http/*
-cookies/*
-tigger/*
-amount/*
-*.list*
+#log/*
+#captcha/*.gif
+#captcha/*.res
+#captcha/archives/*
+#http/*
+#cookies/*
+#tigger/*
+#amount/*
